// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RowLabel /> renders RowLabel 1`] = `
<div
  className="row__content--top bJqAql"
>
  <div
    className="kgxqXO"
  >
    <div
      className="row__label row__label--mobile WeinS"
      data-index={0}
    >
      <div
        className="text text--dark text--primary ipevJh gwaFLV"
        disabled={false}
        size="hecto"
      >
        test label
      </div>
    </div>
    <div
      className="row__label row__label--desktop row__label--active ISjeT"
      data-index={0}
    >
      <div
        className="text text--dark text--primary ipevJh gwaFLV"
        disabled={false}
        size="hecto"
      >
        test label
      </div>
    </div>
    <div
      className="row__label row__label--expanded row__label--desktop row__label--hidden ISjeT"
      data-index={0}
    >
      <div
        className="text text--dark text--primary ipevJh gwaFLV"
        disabled={false}
        size="hecto"
      >
        test label
      </div>
    </div>
  </div>
</div>
`;

exports[`<RowLabel /> renders RowLabel variant \`accent\` 1`] = `
<div
  className="row__content--top bJqAql"
>
  <div
    className="kgxqXO"
  >
    <div
      className="row__label row__label--mobile WeinS"
      data-index={0}
    >
      <div
        className="text text--accent text-- text--primary cuvCFV gmxDtj"
        disabled={false}
        size="hecto"
      >
        test label
      </div>
    </div>
    <div
      className="row__label row__label--desktop row__label--active ISjeT"
      data-index={0}
    >
      <div
        className="text text--accent text-- text--primary cuvCFV gmxDtj"
        disabled={false}
        size="hecto"
      >
        test label
      </div>
    </div>
    <div
      className="row__label row__label--expanded row__label--desktop row__label--hidden ISjeT"
      data-index={0}
    >
      <div
        className="text text--accent text-- text--primary cuvCFV gmxDtj"
        disabled={false}
        size="hecto"
      >
        test label
      </div>
    </div>
  </div>
</div>
`;

exports[`<RowLabel /> renders RowLabel variant \`alert\` 1`] = `
<div
  className="row__content--top bJqAql"
>
  <div
    className="kgxqXO"
  >
    <div
      className="row__label row__label--mobile WeinS"
      data-index={0}
    >
      <div
        className="badge jCfiAj"
        color="#d93a3a"
      >
        test label
      </div>
    </div>
    <div
      className="row__label row__label--desktop row__label--active ISjeT"
      data-index={0}
    >
      <div
        className="badge jCfiAj"
        color="#d93a3a"
      >
        test label
      </div>
    </div>
    <div
      className="row__label row__label--expanded row__label--desktop row__label--hidden ISjeT"
      data-index={0}
    >
      <div
        className="badge jCfiAj"
        color="#d93a3a"
      >
        test label
      </div>
    </div>
  </div>
</div>
`;

exports[`<RowLabel /> renders RowLabel variant \`caution\` 1`] = `
<div
  className="row__content--top bJqAql"
>
  <div
    className="kgxqXO"
  >
    <div
      className="row__label row__label--mobile WeinS"
      data-index={0}
    >
      <div
        className="badge kwlPtm"
        color="#c69a22"
      >
        test label
      </div>
    </div>
    <div
      className="row__label row__label--desktop row__label--active ISjeT"
      data-index={0}
    >
      <div
        className="badge kwlPtm"
        color="#c69a22"
      >
        test label
      </div>
    </div>
    <div
      className="row__label row__label--expanded row__label--desktop row__label--hidden ISjeT"
      data-index={0}
    >
      <div
        className="badge kwlPtm"
        color="#c69a22"
      >
        test label
      </div>
    </div>
  </div>
</div>
`;

exports[`<RowLabel /> renders RowLabel variant \`neutral\` 1`] = `
<div
  className="row__content--top bJqAql"
>
  <div
    className="kgxqXO"
  >
    <div
      className="row__label row__label--mobile WeinS"
      data-index={0}
    >
      <div
        className="badge dZrpdN"
        color="rgba(38, 38, 38, 0.6)"
      >
        test label
      </div>
    </div>
    <div
      className="row__label row__label--desktop row__label--active ISjeT"
      data-index={0}
    >
      <div
        className="badge dZrpdN"
        color="rgba(38, 38, 38, 0.6)"
      >
        test label
      </div>
    </div>
    <div
      className="row__label row__label--expanded row__label--desktop row__label--hidden ISjeT"
      data-index={0}
    >
      <div
        className="badge dZrpdN"
        color="rgba(38, 38, 38, 0.6)"
      >
        test label
      </div>
    </div>
  </div>
</div>
`;

exports[`<RowLabel /> renders RowLabel variant \`positive\` 1`] = `
<div
  className="row__content--top bJqAql"
>
  <div
    className="kgxqXO"
  >
    <div
      className="row__label row__label--mobile WeinS"
      data-index={0}
    >
      <div
        className="text text--accent text-- text--primary efwKLh gmxDtj"
        disabled={false}
        size="hecto"
      >
        test label
      </div>
    </div>
    <div
      className="row__label row__label--desktop row__label--active ISjeT"
      data-index={0}
    >
      <div
        className="text text--accent text-- text--primary efwKLh gmxDtj"
        disabled={false}
        size="hecto"
      >
        test label
      </div>
    </div>
    <div
      className="row__label row__label--expanded row__label--desktop row__label--hidden ISjeT"
      data-index={0}
    >
      <div
        className="text text--accent text-- text--primary efwKLh gmxDtj"
        disabled={false}
        size="hecto"
      >
        test label
      </div>
    </div>
  </div>
</div>
`;

exports[`<RowLabel /> renders opened RowLabel 1`] = `
<div
  className="row__content--top bJqAql"
>
  <div
    className="kgxqXO"
  >
    <div
      className="row__label row__label--mobile WeinS"
      data-index={0}
    >
      <div
        className="text text--dark text--primary ipevJh gwaFLV"
        disabled={false}
        size="hecto"
      >
        test label
      </div>
    </div>
    <div
      className="row__label row__label--desktop row__label--hidden ISjeT"
      data-index={0}
    >
      <div
        className="text text--dark text--primary ipevJh gwaFLV"
        disabled={false}
        size="hecto"
      >
        test label
      </div>
    </div>
    <div
      className="row__label row__label--expanded row__label--desktop row__label--active ISjeT"
      data-index={0}
    >
      <div
        className="text text--dark text--primary ipevJh gwaFLV"
        disabled={false}
        size="hecto"
      >
        test label
      </div>
    </div>
  </div>
</div>
`;
